# EPGNN

./: .gitignore  CODING_PLAN.md  LICENSE  Makefile  New_Project.md  PAPER_PLAN.md  PROJECT_OVERVIEW.md  README.md  SERVER_RUNBOOK.md  ablation.py  earthquake_gnn.pth  evaluate.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tester.py  train.py
.github/workflows/: ci.yml
configs/: default.yaml
data/: data_prep.R  dataset.py  mock_data.py
engine/: evaluator.py  trainer.py
epgnn/data/: data_prep.R  dataset.py  mock_data.py
epgnn/models/: gnn.py
losses/: custom_losses.py
models/: gnn.py
modules/: transformer.py  waveform_cnn.py
scripts/: download_datasets.sh  run_full_train.sh  run_smoke_test.sh  setup_env.sh
tests/: test_smoke.py
