[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epgnn"
version = "0.1.0"
description = "Earthquake Prediction Graph Neural Network"
authors = [
    {name = "Arya Addagarla"}
]
dependencies = [
    "torch",
    "torch-geometric",
    "pandas",
    "numpy",
    "h5py",
    "scikit-learn",
    "tqdm"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
